--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
   <name>pwn4jshell Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <jetty-version>9.2.11.v20150529</jetty-version>
+    <jetty-version>9.4.8.v20171121</jetty-version>
+    <javaCompilerVersion>1.8</javaCompilerVersion>
   </properties>
 
   <dependencies>
@@ -27,6 +28,14 @@
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty-version}</version>
+          <configuration>
+            <war>${project.build.directory}/${project.build.finalName}.war</war>
+            <webAppSourceDirectory>${project.basedir}/src/main/webapp</webAppSourceDirectory>
+          <webApp>
+              <contextPath>/${project.build.finalName}</contextPath>
+          </webApp>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
+      </configuration>
       </plugin>
     </plugins>
   </build>
